src/test/ui/regions/regions-variance-covariant-use-contravariant.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/regions-variance-covariant-use-contravariant.rs:33:9
   |
LL | fn use_<'short,'long>(c: Covariant<'long>,
   |         ------ ----- lifetime `'long` defined here
   |         |
   |         lifetime `'short` defined here
...
LL |     let _: Covariant<'short> = c; //~ ERROR E0623
   |         ^ type annotation requires that `'short` must outlive `'long`

error: aborting due to previous error

